objects/Reserved_Room__c.object
<CustomObject>
    <description>Connection between reservation and room.</description>
    <fields>
        <fullName>Date_Begin__c</fullName>
        <formula>Reservation__r.Reservation_Begin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Begin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_End__c</fullName>
        <formula>Reservation__r.Reservation_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <formula>Room__r.Hotel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Reserved Rooms</relationshipLabel>
        <relationshipName>Reserved_Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Room_Number__c</fullName>
        <formula>Room__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Reserved Rooms</relationshipLabel>
        <relationshipName>Reserved_Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Reservation_Cost__c</fullName>
        <label>Total Reservation Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Room_Cost__c</fullName>
        <formula>(Reservation__r.Reservation_End__c - Reservation__r.Reservation_Begin__c) *  Room__r.Price_per_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Room Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Reserved Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Reserved Room Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reserved Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>